--- a/src/app/landing/facts/facts.component.html
+++ b/src/app/landing/facts/facts.component.html
@@ -2,18 +2,18 @@
 
     <div class="facts-box">
         <mat-icon fontIcon="play_circle"></mat-icon>
-        <h2>Unbegrenzte Unterhaltung</h2>
-        <h3>Entdecke Tausende Stunden Unterhaltung mit TV-Serien, Filmen und Originals.</h3>
+        <h2 translate>Unlimited entertainment</h2>
+        <h3 translate>Discover thousands of hours of entertainment with TV series, films and originals.</h3>
     </div>
     <div class="facts-box">
         <mat-icon fontIcon="cast"></mat-icon>
-        <h2>Verfügbar auf deinen Lieblingsgeräten</h2>
-        <h3>Streame mit kompatiblen Endgeräten auf bis zu vier Bildschirmen gleichzeitig.</h3>
+        <h2 translate>Available on your favourite devices</h2>
+        <h3 translate>Stream with compatible devices on up to four screens simultaneously.</h3>
     </div>
     <div class="facts-box">
         <mat-icon fontIcon="family_restroom"></mat-icon>
-        <h2>Intuitive Kindersicherung</h2>
-        <h3>Familientaugliche Inhalte dank leicht zu bedienender Kindersicherung.</h3>
+        <h2 translate>Intuitive child safety lock</h2>
+        <h3 translate>Family-friendly content thanks to easy-to-use parental controls.</h3>
     </div>
 
 
