--- a/src/app/landing/faq/faq.component.html
+++ b/src/app/landing/faq/faq.component.html
@@ -2,81 +2,82 @@
     <mat-accordion>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Was bietet dir VideoFlix?
+                <mat-panel-title translate>
+                    What does VideoFlix offer you?
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <p>VideoFlix erscheint als schlichte Nachahmung einer Streamingplattform.</p>
+            <p translate>VideoFlix appears to be a simple imitation of a streaming platform.</p>
         </mat-expansion-panel>
         <br>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Was kann ich auf Videoflix anschauen?
+                <mat-panel-title translate>
+                    What can I watch on Videoflix?
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <p>Entdecke auf VideoFlix Tausende von Filmen und Serien von erstklassigen Geschichtenerzählern weltweit,
-                mit monatlich neuen Inhalten, um sicherzustellen, dass immer etwas Spannendes auf dich wartet.</p>
-            <li>
-                Tauche ein in die neuesten Live-Action- und Animations-Blockbuster von VideoFlix, darunter
-                beeindruckende Werke wie "Sternenzauber". Erlebe emotionale Geschichten für Groß und Klein von
-                VideoFlix-Pixar, einschließlich des neuen Blockbusters "Die Schatztruhe der Farben".
+            <p translate>Discover thousands of films and series from world-class storytellers on VideoFlix, with new
+                content added monthly to ensure there's always something exciting waiting for you.</p>
+            <li translate>
+                Immerse yourself in the latest live action and animation blockbusters from VideoFlix, including
+                impressive works such as "Star Magic". Experience emotional stories for young and old from VideoFlix
+                pixies, including the new blockbuster "The Treasure Chest of Colours".
             </li>
             <br>
-            <li>
-                Erweitere dein Seherlebnis mit den ständig wachsenden Geschichten des Marvel Cinematic Universe. Genieße
-                exklusive Marvel Studios Original Serien wie "Zeitensprung", "Himmelsfeger", "Dimensionsdämmerung" und
-                "Pfeilschatten" wie nie zuvor.
+            <li translate>
+                Expand your viewing experience with the ever-growing stories of the Morvel Cinematic Galaxy. Enjoy
+                exclusive Marvel Studios Original Series like "Time Leap", "Sky Sweeper", "Dimensional Dawn" and
+                "Arrowshadow" like never before.
             </li>
             <br>
-            <li>
-                Reise durch die epische Star Quest Saga oder erlebe die weltweit erste Live-Action Star Quest Serie,
-                "Die Sternenwanderer", exklusiv auf VideoFlix.
+            <li translate>
+                Journey through the epic Star Quest saga or experience the world's first live-action Star Quest series,
+                "The Star Walkers", exclusively on VideoFlix.
             </li>
             <br>
-            <li>
-                Bewundere die atemberaubende Schönheit unseres Planeten mit furchtlosen National Geographic Entdeckern
-                und einer Fülle fantastischer Dokumentationen, darunter "Die Geheimnisse des Dschungelreichs" und "Reise
-                durch das Zeitlabyrinth".
+            <li translate>
+                Marvel at the breathtaking beauty of our planet with fearless National Geographic explorers and a wealth
+                of fantastic documentaries, including "The Secrets of the Jungle Kingdom" and "Journey through the
+                labyrinth of time".
             </li>
             <br>
-            <li>In der Star-Kategorie von VideoFlix findest du alles für einen Serienmarathon, darunter "Phantomzone",
-                ein mitreißendes Drama über Überleben und Freundschaft, oder die neueste Staffel von "Krankenhaus der
-                Zukunft". Tauche ein in ein Universum voller fesselnder Unterhaltung!</li>
+            <li translate>In VideoFlix's series category, you'll find everything you need for a series marathon,
+                including "The Snail", a gripping drama about the survival and friendship of a snail, or the latest
+                season of "Hospital of the Future". Immerse yourself in a universe full of captivating entertainment!
+            </li>
         </mat-expansion-panel>
         <br>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Wie viel kostet VideoFlix?
+                <mat-panel-title translate>
+                    How much does VideoFlix cost?
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <p>VideoFlix dient ausschließlich als Demonstrationsplattform, und aus diesem Grund entstehen hier keinerlei
-                Kosten. Erfahre die Faszination unseres Angebots und erkunde die Vielfalt an hochwertigen Inhalten, ohne
-                dabei finanzielle Verpflichtungen einzugehen.</p>
+            <p translate>VideoFlix serves exclusively as a demonstration platform, and for this reason no costs are
+                incurred here. costs. Experience the fascination of our offer and explore the variety of high-quality
+                content without financial commitments.</p>
         </mat-expansion-panel>
         <br>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Welche Endgeräte werden unterstützt?
+                <mat-panel-title translate>
+                    Which end devices are supported?
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <p> VideoFlix unterstützt eine breite Palette von Endgeräten, um dir maximale Flexibilität zu bieten. Du
-                kannst problemlos auf unsere Inhalte zugreifen, sei es auf deinem Smartphone, Desktop-Computer oder
-                anderen kompatiblen Geräten. Egal, ob du unterwegs bist oder lieber auf einem großen Bildschirm
-                anschaust, VideoFlix passt sich deinen Bedürfnissen an und bietet ein nahtloses Streaming-Erlebnis auf
-                Smartphones und Desktops gleichermaßen.</p>
+            <p translate> VideoFlix supports a wide range of devices to give you maximum flexibility. You can easily
+                access our content, be it on your smartphone, desktop computer or other other compatible devices.
+                Whether you're on the go or prefer to watch on a big screen, VideoFlix VideoFlix adapts to your needs
+                and offers a seamless streaming experience on smartphones and desktops alike. smartphones and desktops
+                alike.</p>
         </mat-expansion-panel>
         <br>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Wie kann ich meinen Account wieder löschen?
+                <mat-panel-title translate>
+                    How can I delete my account?
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <p> Um diese Aktion durchzuführen, bitten wir dich zunächst um deine Anmeldung. Nach erfolgreichem Login
-                kannst du im Profilbereich bequem und einfach deinen Account löschen.</p>
+            <p translate> To carry out this action, we first ask you to log in. After successfully logging in you can
+                conveniently and easily delete your account in the profile area.</p>
         </mat-expansion-panel>
     </mat-accordion>
 </div>
