--- a/src/app/module/category/category-funny/category-funny.component.html
+++ b/src/app/module/category/category-funny/category-funny.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <p>Lustiges</p>
+    <p translate>Funny</p>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
