--- a/src/app/module/category/category-nature/category-nature.component.html
+++ b/src/app/module/category/category-nature/category-nature.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <p>Natur</p>
+    <p translate>Nature</p>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
