--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="wrapper">
     <div class="content">
-        <h2>Meine Uploads</h2>
+        <h2 translate>My Uploads</h2>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <!--- Note that these columns can be defined in any order.
