--- a/src/app/account/landing-reset-password/landing-reset-password.component.html
+++ b/src/app/account/landing-reset-password/landing-reset-password.component.html
@@ -1,36 +1,33 @@
 <div class="register-position">
     <div class="register">
         <mat-card class="register-card">
-
             <mat-card-content>
-                <h2>password ändern</h2>
-                <h3>Gebe dein neues password ein
+                <h2 translate>Change password</h2>
+                <h3 translate>Enter your new password
                 </h3>
             </mat-card-content>
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
-                    <mat-label>Enter your password</mat-label>
+                    <mat-label translate>Enter your password</mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
                     @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
                     @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label>Enter your password again</mat-label>
+                    <mat-label translate>Enter your password again</mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
                     @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
                     @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
-                <p>Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl sowie
-                    einem Sonderzeichen.</p>
-
-
+                <p translate>Use at least eight characters (case sensitive) with at least one number and one special
+                    character. one special character.</p>
                 <button class="next-button" mat-fab extended color="primary">
-                    Speichern
+                    <p translate>Save</p>
                 </button>
                 <button class="next-button" mat-fab extended color="">
-                    Zurück
+                    <p translate>Back</p>
                 </button>
             </form>
         </mat-card>
