--- a/src/app/module/category/category-new-movies/category-new-movies.component.html
+++ b/src/app/module/category/category-new-movies/category-new-movies.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <p>Neu Filme</p>
+    <p translate>New movie</p>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
