--- a/src/app/module/category/category-series/category-series.component.html
+++ b/src/app/module/category/category-series/category-series.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <p>Serie</p>
+    <p translate>Series</p>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div *ngFor="let single of data" class="content-box">
